--- a/source/changelog.ini
+++ b/source/changelog.ini
@@ -2,9 +2,35 @@
 title   = [new feature] RSS Feed
 link    = http://kdr2.net/service/feed/rss
 author  = KDr2
-cats    = feature,kdr2
+cats    = feature
 desc    = The RSS feed shows the changelog of this site now.
-content = None
+content = The RSS feed shows the changelog of this site now.
+
+[2010-02-04 11:00]
+title   = [new feature] Comments on some pages.
+link    = http://kdr2.net
+author  = KDr2
+cats    = feature
+desc    = Add comments service based on django and Ajax.
+content = Add comments service based on django and Ajax.
+
+[2010-02-04 10:00]
+title   = [change] Remove wordpress blog.
+link    = http://kdr2.net
+author  = KDr2
+cats    = change
+desc    = Remove my blog based on wordpress, use static pages instead.
+content = Remove my blog based on wordpress, use static pages instead.
+
+
+[2010-01-31 10:00]
+title   = [new feature] New site based on Sphinx.
+link    = http://kdr2.net
+author  = KDr2
+cats    = feature
+desc    = Built the first version of this site with sphinx.
+content = Built the first version of this site with sphinx.
+
 
 
 
