--- a/source/changelog.ini
+++ b/source/changelog.ini
@@ -1,4 +1,12 @@
 
+[2010-06-09 16:17]
+title   = QQREADER0EA5369AA7BBE52B
+link    = http://kdr2.net/service/feed/rss
+author  = KDr2
+cats    = feature
+desc    = QQREADER0EA5369AA7BBE52B
+content = QQREADER0EA5369AA7BBE52B
+
 [2010-02-28 10:17]
 title   = [new feature] RSS Feed
 link    = http://kdr2.net/service/feed/rss
