--- a/kdr2net/development.ini
+++ b/kdr2net/development.ini
@@ -39,6 +39,10 @@ sqlalchemy.url = sqlite:///%(here)s/development.db
 # execute malicious code after an exception is raised.
 #set debug = false
 
+email_server   = smtp.163.com
+email_username = frisky_dev
+email_password = frisky_password
+email_from     = frisky_dev@163.com
 
 # Logging configuration
 [loggers]
