--- a/kdr2net/development.ini
+++ b/kdr2net/development.ini
@@ -32,17 +32,19 @@ beaker.session.secret = somesecret
 #beaker.session.data_dir = %(here)s/data/sessions
 
 # SQLAlchemy database URL
-sqlalchemy.url = sqlite:///%(here)s/development.db
+sqlalchemy.url = sqlite:///%(here)s/data/development.db
 
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
 # execute malicious code after an exception is raised.
 #set debug = false
 
-email_server   = smtp.163.com
-email_username = frisky_dev
-email_password = frisky_password
-email_from     = frisky_dev@163.com
+email_on       = false
+email_server   = smtp.gmail.com
+email_server_port   = 587
+email_username = k
+email_password = d
+email_from     = r
 
 # Logging configuration
 [loggers]
