del static pages

--- a/kdr2net/development.ini
+++ b/kdr2net/development.ini
@@ -6,9 +6,9 @@
 [DEFAULT]
 debug = true
 # Uncomment and replace with the address which should receive any error reports
-email_to = killy.draw@gmail.com
-smtp_server = smtp.gmail.com
-error_email_from = killy.draw@gmail.com
+#email_to =
+#smtp_server = smtp.gmail.com
+#error_email_from =
 
 [server:main]
 #use = egg:Paste#http
