add blog: back to dreamhost

--- a/source/changelog.ini
+++ b/source/changelog.ini
@@ -1,5 +1,13 @@
 
 [2010-02-28 10:17]
+title   = Back to DreamHost
+link    = http://kdr2.net/blog/20101128_back_to_dreamhost.html
+author  = KDr2
+cats    = blog
+desc    = I came back to DreamHost; How to Run wsgi app on DreamHost via fastcgi.
+content = [I came back to DreamHost; How to Run wsgi app on DreamHost via fastcgi.]
+
+[2010-02-28 10:17]
 title   = [new feature] RSS Feed
 link    = http://kdr2.net/service/feed/rss
 author  = KDr2
