--- a/source/changelog.ini
+++ b/source/changelog.ini
@@ -1,4 +1,13 @@
 
+[2010-12-24 10:05]
+title   = PYC文件格式分析
+link    = http://kdr2.net/blog/pyc_format.html
+author  = KDr2
+cats    = blog/python
+desc    = PYC文件格式分析
+content = [PYC文件格式分析]
+
+
 [2010-11-28 10:17]
 title   = Back to DreamHost
 link    = http://kdr2.net/blog/20101128_back_to_dreamhost.html
