ConfigParser for Unicode

--- a/kdr2net/development.ini
+++ b/kdr2net/development.ini
@@ -11,8 +11,8 @@ debug = true
 #error_email_from =
 
 [server:main]
-#use = egg:Paste#http
-use = egg:Flup#fcgi_thread
+use = egg:Paste#http
+#use = egg:Flup#fcgi_thread
 host = 127.0.0.1
 port = 8080
 
